# pdb_align

./: .gitignore  CLAUDE.md  README.md  analysis_notebook.ipynb  final_fixes.py  fix_app.py  fix_app_final.py  fix_batch_align.py  fix_last_result.py  fix_test.py  get_pdbs.py  make_alignment_result.py  patch_aligner_b_factor.py  patch_aligner_b_factor_export.py  patch_aligner_b_factor_export2.py  patch_aligner_b_factor_export3.py  patch_aligner_b_factor_export4.py  patch_aligner_b_factor_export5.py  patch_aligner_docstring.py  patch_aligner_docstring2.py  patch_aligner_pvalue.py  patch_aligner_pvalue_result.py  patch_aligner_seqfree.py  patch_aligner_seqfree2.py  patch_auto.py  patch_b_factor.py  patch_b_factor_export.py  patch_docstring.py  patch_extract_b_factor.py  patch_extract_b_factor2.py  patch_gemmi_clone.py  patch_gemmi_final.py  patch_gemmi_final2.py  patch_gemmi_final3.py  patch_get_aligned_atoms.py  patch_memory.py  patch_setup.py  pyproject.toml  requirements-app.txt  requirements-core.txt  (+7 more)
.devcontainer/: devcontainer.json
docs/superpowers/plans/: 2026-04-11-pdb-align-expansion.md
docs/superpowers/specs/: 2026-04-11-pdb-align-expansion-design.md
pdb_align/: __init__.py  __main__.py  aligner.py  aligner.py.bak  aligner_patch.py  core.py  core_patch.py  exceptions.py  metrics.py  result.py  structure.py
pdb_align.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_aligner.py  test_core.py
